--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="/"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
+               <a href="#main"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>Ray Bogman & Vladimir Kerkhoff</h2>
 	       <h3>More than 400 pages and 50 indepth Magento 2 recipies</h3>
@@ -63,6 +63,7 @@
            </nav>
         </aside>
         <div class="content">
+	<p id="main" tabindex="-1"></p>
 
 	<div class="portfolio-item group first">
               <div class="portfolio-info">
