--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 	$('.open-popup-sitemap').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Sitemap</h3></div>',
+                src: '<div class="white-popup"><h3>Sitemap</h3><div><a href="https://mage2cookbook.com/" title="Magento 2 Cookbook - Ray Bogman &amp; Vladimir Kerkhoff">Magento 2 Cookbook - Ray Bogman & Vladimir Kerkhoff</a></div></div>',
                 type: 'inline'
         },
         closeBtnInside: true
