--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
 		   <li><a href="#" class="open-popup-contact">Address</a></li>
 	       </ul>
            </nav>
+	
+   		<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
+     			<span class="rating"><span class="rating" style="width:99%"></span></span>
+      				Book reviews:
+      			<span itemprop="ratingValue">9,6</span>
+      			<meta itemprop="bestRating" content="10"/>
+      			<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">10</span> reviews
+  		</div>
+
         </aside>
         <div class="content">
 	<p id="main" tabindex="-1"></p>
