--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
 	       </ul>
            </nav>
 	
+		<div itemscope itemtype="http://schema.org/LocalBusiness">
+   			<span itemprop="name">Jira ICT</span>
+  			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+     			<span itemprop="streetAddress" >Palfrenier 34</span><br/>
+     			<span itemprop="postalCode">1188 DP</span> 
+     			<span itemprop="addressLocality">Amstelveen</span>
+   		</div>
+   		<p>E-mail: <a href="/"><span itemprop="email">ray @ bogman.info</span></a></p>
+   		<meta itemprop="url" content="https://mage2cookbook.com">
    		<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
      			<span class="rating"><span class="rating" style="width:99%"></span></span>
       				Book reviews:
@@ -69,6 +78,9 @@
       			<meta itemprop="bestRating" content="10"/>
       			<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">10</span> reviews
   		</div>
+			<meta itemprop="logo" content="https://mage2cookbook.com/images/magento2cookbook-250.jpg" />
+			<div itemprop="geo" itemscope="" itemtype="http://schema.org/GeoCoordinates"><meta itemprop="latitude" content="52.37753" /><meta itemprop="longitude" content="4.90756" /></div>
+		</div>
 
         </aside>
         <div class="content">
