--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
            </nav>
 	
 		<div itemscope itemtype="http://schema.org/LocalBusiness">
-   			<span itemprop="name">Jira ICT</span>
+   			<span itemprop="name">Magento 2 Cookbook</span>
   			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
      			<span itemprop="streetAddress" >Palfrenier 34</span><br/>
      			<span itemprop="postalCode">1188 DP</span> 
