--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 	
 		<div itemscope itemtype="http://schema.org/LocalBusiness">
    			<span itemprop="name">Magento 2 Cookbook</span>
+			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">		
+     			<span itemprop="postalCode">1188 DP</span> 		
+     			<span itemprop="addressLocality">Amstelveen</span>
    		</div>
    		<p>E-mail: <a href="/"><span itemprop="email">ray @ bogman.info</span></a></p>
    		<meta itemprop="url" content="https://mage2cookbook.com">
