--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
               <div class="portfolio-info">
                 <div class="date">March 2016</div>
                 <div class="description">
+                  Dealer 4 Dealer - Win a Magento 2 Cookbook.
+                </div>
+                <div class="meta">
+                  <p><strong>Blog </strong><a target="_blank" href="http://www.dealer4dealer.nl/actueel/win-magento2-cookbook" title="Dealer 4 Dealer Blog - Win a Magento 2 Cookbook">Dealer 4 Dealer Blog</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
+              </div>
+        </div>
+
+	<div class="portfolio-item group">
+              <div class="portfolio-info">
+                <div class="date">March 2016</div>
+                <div class="description">
                   How to Get Involved in the Magento Community.
                 </div>
                 <div class="meta">
