--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Magento 2 Cookbook - Ray Bogman & Vladimir Kerkhoff</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="robots" content="INDEX,FOLLOW"/>
-    <link rel="stylesheet" href="css/20150816203525.css">
+    <link rel="stylesheet" href="css/20160326134942.css">
     <link rel="canonical" href="https://mage2cookbook.com"/>
     <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -81,7 +81,10 @@
         </aside>
         <div class="content">
 	<p id="main" tabindex="-1"></p>
-
+	<div id="button-wrap-inner">
+          <a class="btn" target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook" title="Packtpub Magento 2 Bookbook"><i class="fa fa-shopping-cart fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
+	</div>
+	
 	<div class="portfolio-item group first">
               <div class="portfolio-info">
                 <div class="date">March 2016</div>
