--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       			<meta itemprop="bestRating" content="10"/>
       			<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">31</span> reviews
   		</div>
+		<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+    			 <meta itemprop="priceCurrency" content="USD"/>
 			 <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span itemprop="price">44.99</span>
        			 <meta itemprop="availability" href="https://www.packtpub.com/web-development/magento-2-cookbook" />In stock
 			 <span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
