--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		
 		<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 <meta itemprop="priceCurrency" content="USD"/>
-			 <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span itemprop="price">44.99</span>
+			 <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span itemprop="price">$ 44.99</span>
        			 <meta itemprop="availability" href="https://www.packtpub.com/web-development/magento-2-cookbook" />In stock
 			 <span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
 		</div>
