--- a/index.html
+++ b/index.html
@@ -64,26 +64,25 @@
 	
 		<div itemscope itemtype="http://schema.org/LocalBusiness">
    			<span itemprop="name">Magento 2 Cookbook</span>
-			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">		
-   		</div>
-   		<p>E-mail: <a href="/"><span itemprop="email">ray @ bogman.info</span></a></p>
-   		<meta itemprop="url" content="https://mage2cookbook.com">
-   		<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
-     			<span class="rating"><span class="rating" style="width:99%"></span></span>
+			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"></div>
+   			<p>E-mail: <a href="/"><span itemprop="email">ray @ bogman.info</span></a></p>
+   			<meta itemprop="url" content="https://mage2cookbook.com">
+   		
+			<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
+     				<span class="rating"><span class="rating" style="width:99%"></span></span>
       				Book reviews:
-      			<span itemprop="ratingValue">9,5</span>
-      			<meta itemprop="bestRating" content="10"/>
-      			<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">31</span> reviews
-  		</div>
-			 <meta itemprop="logo" content="https://mage2cookbook.com/images/magento2cookbook-250.jpg" />
+      				<span itemprop="ratingValue">9,5</span>
+      				<meta itemprop="bestRating" content="10"/>
+      				<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">31</span> reviews
+  			</div>
+			 	<meta itemprop="logo" content="https://mage2cookbook.com/images/magento2cookbook-250.jpg" />
 		
-		<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-    			 <meta itemprop="priceCurrency" content="USD"/>
-			 <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span itemprop="price">$ 44.99</span>
-       			 <meta itemprop="availability" href="https://www.packtpub.com/web-development/magento-2-cookbook" />In stock
-			 <span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
-		</div>
-
+			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+    			 	<meta itemprop="priceCurrency" content="USD"/>
+			 	<meta itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span itemprop="price">$ 44.99</span>
+       			 	<link itemprop="availability" href="https://www.packtpub.com/web-development/magento-2-cookbook" />In stock
+			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
+			</div>
 		</div>
 
         </aside>
