--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 	<meta itemprop="priceCurrency" content="USD"/>
 			 	<span itemprop="price">$ 44.99</span>
-       			 	<link itemprop="availability" href="http://schema.org/InStock">In stock
+       			 	<span itemprop="availability" href="http://schema.org/InStock">In stock</span>
 			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
 			</div>
 		</div>
