--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       				<meta itemprop="bestRating" content="10"/>
       				<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">31</span> reviews
   			</div>
-		
+		</div>
+		<div class="product-view" itemscope itemtype="http://schema.org/Product">
 			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 	<meta itemprop="priceCurrency" content="USD"/>
 			 	<span itemprop="price">$ 44.99</span>
