--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
       				<meta itemprop="worstRating" content="1"/>based on <span itemprop="ratingCount">31</span> reviews
   			</div>
 		</div>
-		<div class="product-view" itemscope itemtype="http://schema.org/Product">
+		<div itemscope itemtype="http://schema.org/Product">
 			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 	<meta itemprop="priceCurrency" content="USD"/>
 			 	<span itemprop="price">$ 44.99</span>
-       			 	<span itemprop="availability" href="http://schema.org/InStock">In stock</span>
+       			 	<span itemprop="name">Magento 2 Cookbook</span>
+				<span itemprop="availability" href="http://schema.org/InStock">In stock</span>
 			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
 			</div>
 		</div>
