--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   			</div>
 		</div>
 		<div itemscope itemtype="http://schema.org/Product">
+       			<span itemprop="name">Magento 2 Cookbook</span>
 			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 	<meta itemprop="priceCurrency" content="USD"/>
 			 	<span itemprop="price">$ 44.99</span>
