--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
        			 	<span itemprop="name">Magento 2 Cookbook</span>
 				<span itemprop="availability" href="http://schema.org/InStock">In stock</span>
 			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
+				<meta itemprop="logo" content="https://mage2cookbook.com/images/magento2cookbook-250.jpg" />
 			</div>
 		</div>
 
