--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="#main"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
+               <a href="#main"><amp-img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>Ray Bogman & Vladimir Kerkhoff</h2>
 	       <h3>More than 342 pages and 50 indepth Magento 2 recipies</h3>
@@ -81,7 +81,7 @@
        			<span itemprop="name">Magento 2 Cookbook</span>
 			<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
     			 	<meta itemprop="priceCurrency" content="USD"/>
-			 	<meta itemprop="price"/>$ 44.99
+			 	<span itemprop="price">$ 44.99</span>
        			 	<span itemprop="name">Magento 2 Cookbook</span>
 				<span itemprop="availability" href="http://schema.org/InStock">In stock</span>
 			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff</span>
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
+                <amp-img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
               </div>
         </div>
 
@@ -122,7 +122,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
+                <amp-img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
               </div>
           </div>
 	
@@ -138,7 +138,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
+                <amp-img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
               </div>
             </div>
 
@@ -153,7 +153,7 @@
                 </div>
               </div>
               <div class="portfolio-image">/
-                <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
+                <amp-img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
               </div>
             </div>
             
@@ -168,7 +168,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
+                <amp-img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
               </div>
             </div>
            
@@ -183,7 +183,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
+                <amp-img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
               </div>
             </div>
 
