--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="#main"><amp-img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
+               <a href="#main"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>Ray Bogman & Vladimir Kerkhoff</h2>
 	       <h3>More than 342 pages and 50 indepth Magento 2 recipies</h3>
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
+                <img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
               </div>
         </div>
 
@@ -122,7 +122,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
+                <img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
               </div>
           </div>
 	
@@ -138,7 +138,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
+                <img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
               </div>
             </div>
 
@@ -153,7 +153,7 @@
                 </div>
               </div>
               <div class="portfolio-image">/
-                <amp-img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
+                <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
               </div>
             </div>
             
@@ -168,7 +168,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
+                <img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
               </div>
             </div>
            
@@ -183,7 +183,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
+                <img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
               </div>
             </div>
 
