--- a/index.html
+++ b/index.html
@@ -89,6 +89,50 @@
 			</div>
 		</div>
 
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "WebPage",
+  "breadcrumb": "Books > Magento > Magento 2",
+  "mainEntity":{
+          "@type": "Book",
+          "author": "Ray Bogman & Vladimir Kerkhoff",
+          "bookFormat": "http://schema.org/Paperback",
+          "datePublished": "2016-04-28",
+          "image": "images/magento2cookbook-250.jpg",
+          "inLanguage": "English",
+          "isbn": "9781785887062",
+          "name": "Magento 2 Cookbook",
+          "numberOfPages": "342",
+          "offers": {
+            "@type": "Offer",
+            "availability": "http://schema.org/InStock",
+            "price": "44.99",
+            "priceCurrency": "USD"
+          },
+          "publisher": "Packt Publishing",
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.6",
+            "reviewCount": "31"
+          },
+          "review": [
+            {
+              "@type": "Review",
+              "author": "Bas",
+              "datePublished": "2016-04-29",
+              "name": "A masterpiece of literature",
+              "reviewBody": "I really enjoyed this book. It captures the essential of Magento 2. Great indepth book about Magento 2",
+              "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+           }
+            }
+          ]
+        }
+}
+</script>
+
         </aside>
         <div class="content">
 	<p id="main" tabindex="-1"></p>
