--- a/index.html
+++ b/index.html
@@ -139,8 +139,38 @@
 	<div id="button-wrap-inner">
           <a class="btn" target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook" title="Packtpub Magento 2 Bookbook">Get your Magento 2 Cookbook copy here</a>
 	</div>
+
+	 <div class="portfolio-item group first">
+              <div class="portfolio-info">
+                <div class="date">April 2016</div>
+                <div class="description">
+                  Apple Itunes - Magento 2 Cookbook.
+                </div>
+                <div class="meta">
+                  <p><strong>URL </strong><a target="_blank" href="https://itunes.apple.com/us/book/magento-2-cookbook/id1077159075?mt=11" title="Apple Itunes - Magento 2 Cookbook">Apple Itunes</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/itunes-magento2cookbook.png" alt="Magento 2 Cookbook at Itunes">
+              </div>
+        </div>
+
+ 	<div class="portfolio-item group">
+              <div class="portfolio-info">
+                <div class="date">March 2016</div>
+                <div class="description">
+                  SupportDesk - Blog Keystone Magento 2 - Magento 2 Cookbook.
+                </div>
+                <div class="meta">
+                  <p><strong>Blog </strong><a target="_blank" href="https://www.supportdesk.nu/blog/184-keystone-magento-2-magento-2-cookbook-door-ray-bogman-en-vladimir-kerkhof" title="SupportDesk - Blog Keystone Magento 2 - Magento 2 Cookbook">SupportDesk Blog</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/supportdesk-magento2cookbook.png" alt="Magento 2 Cookbook at SupportDesk blog">
+              </div>
+        </div>
 	
-	<div class="portfolio-item group first">
+	<div class="portfolio-item group">
               <div class="portfolio-info">
                 <div class="date">March 2016</div>
                 <div class="description">
