--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	       </ul>
            </nav>
 	
-		<div itemscope itemtype="http://schema.org/LocalBusiness">
+		<div itemscope itemtype="http://schema.org/WebPage">
    			<span itemprop="name">Magento 2 Cookbook</span>
 			<div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"></div>
    			<p>E-mail: <a href="/"><span itemprop="email">ray @ bogman.info</span></a></p>
