--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="#main"><amp-img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></amp-img></a>
+               <a href="#main"><amp-img class="portfolio-image" placeholder src="images/magento2cookbook-250.jpg" srcset="images/magento2cookbook-250.jpg 1x, images/magento2cookbook-250.jpg 2x" layout="responsive" width="250" alt="Magento 2 Cookbook" height="250"></amp-img></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>Ray Bogman & Vladimir Kerkhoff</h2>
 	       <h3>More than 342 pages and 50 indepth Magento 2 recipes</h3>
