--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/itunes-magento2cookbook.png" alt="Magento 2 Cookbook at Itunes">
+                <amp-img placeholder src="images/portfolio/itunes-magento2cookbook.png" srcset="images/portfolio/itunes-magento2cookbook.png 1x, images/portfolio/itunes-magento2cookbook.png 2x"  layout="responsive" width="981" alt="Magento 2 Cookbook at Itunes" height="706"></amp-img>
               </div>
         </div>
 
