--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    			<meta itemprop="url" content="https://mage2cookbook.com">
 			
 			<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
-     				<span class="rating"><span class="rating" style="width:99%"></span></span>
+     				<span class="rating"><span class="rating"></span></span>
       				Book reviews:
       				<span itemprop="ratingValue">9,3</span>
       				<meta itemprop="bestRating" content="10"/>
