--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/supportdesk-magento2cookbook.png" alt="Magento 2 Cookbook at SupportDesk blog">
+                <amp-img placeholder src="images/portfolio/supportdesk-magento2cookbook.png" srcset="images/portfolio/supportdesk-magento2cookbook.png 1x, images/portfolio/supportdesk-magento2cookbook.png 2x"  layout="responsive" width="1026" alt="Magento 2 Cookbook at SupportDesk blog" height="777"></amp-img>
               </div>
         </div>
 	
@@ -151,7 +151,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/dealer4dealer-magento2cookbook.png" alt="Magento 2 Cookbook at Dealer 4 Dealer blog">
+                <amp-img placeholder src="images/portfolio/dealer4dealer-magento2cookbook.png" srcset="images/portfolio/dealer4dealer-magento2cookbook.png 1x, images/portfolio/dealer4dealer-magento2cookbook.png 2x"  layout="responsive" width="775" alt="Magento 2 Cookbook at Dealer 4 Dealer blog" height="644"></amp-img>
               </div>
         </div>
 
@@ -166,7 +166,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
+                <amp-img placeholder src="images/portfolio/community-magento2cookbook.png" srcset="images/portfolio/community-magento2cookbook.png 1x, images/portfolio/community-magento2cookbook.png 2x"  layout="responsive" width="737" alt="Magento 2 Cookbook at Magento Community blog" height="702"></amp-img>
               </div>
           </div>
 	
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
+                <amp-img placeholder src="images/portfolio/shoppimon-magento2cookbook.png" srcset="images/portfolio/shoppimon-magento2cookbook.png 1x, images/portfolio/shoppimon-magento2cookbook.png 2x"  layout="responsive" width="934" alt="Magento 2 Cookbook at Shoppimon Webinar" height="503"></amp-img>
               </div>
             </div>
 
@@ -197,7 +197,7 @@
                 </div>
               </div>
               <div class="portfolio-image">/
-                <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
+                <amp-img placeholder src="images/portfolio/dutchento-magento2cookbook.png" srcset="images/portfolio/dutchento-magento2cookbook.png 1x, images/portfolio/dutchento-magento2cookbook.png 2x"  layout="responsive" width="855" alt="Magento 2 Cookbook at Dutchento" height="758"></amp-img>
               </div>
             </div>
             
@@ -212,7 +212,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
+                <amp-img placeholder src="images/portfolio/amazon-magento2cookbook.png" srcset="images/portfolio/amazon-magento2cookbook.png 1x, images/portfolio/amazon-magento2cookbook.png 2x"  layout="responsive" width="718" alt="Magento 2 Cookbook at Amazon" height="666"></amp-img>
               </div>
             </div>
            
@@ -227,7 +227,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
+                <amp-img placeholder src="images/portfolio/packtpub-magento2cookbook.png" srcset="images/portfolio/packtpub-magento2cookbook.png 1x, images/portfolio/packtpub-magento2cookbook.png 2x"  layout="responsive" width="519" alt="First announcement Magento 2 Cookbook" height="782"></amp-img>
               </div>
             </div>
 
