--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ⚡ lang="en">
+<html ⚡ lang="en" itemscope itemtype="http://schema.org/Review">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipes, written by Ray Bogman & Vladimir Kerkhoff"/>
@@ -85,7 +85,6 @@
    			<meta itemprop="url" content="https://mage2cookbook.com">
 			
 			<div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" class="rating-box">
-     				<span class="rating"><span class="rating"></span></span>
       				Book reviews:
       				<span itemprop="ratingValue">9,3</span>
       				<meta itemprop="bestRating" content="10"/>
