--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     			 	<meta itemprop="priceCurrency" content="EUR"/>
 			 	<span itemprop="price">39.91</span>
        			 	<span itemprop="name">Magento 2 Cookbook</span>
-				<span itemprop="availability" itemscope itemtype=="http://schema.org/InStock">In stock</span>
+				<span itemprop="availability" itemscope itemtype="http://schema.org/InStock">In stock</span>
 			 	<span itemprop="description">Magento 2 Cookbook - 342 pages and 50 indepth Magento 2 recipes, written by Ray Bogman & Vladimir Kerkhoff</span>
 				<meta itemprop="image" content="https://mage2cookbook.com/images/magento2cookbook-250.jpg" />
 			</div>
