--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 
         </div>
     </main>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='js/jquery.magnific-popup.min.js'></script>
+    <script async custom-element='amp-iframe' src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script async custom-element='amp-iframe' src='js/jquery.magnific-popup.min.js'></script>
     <script async custom-element='amp-iframe'>
         $('.open-popup-ch1').magnificPopup({
         items: {
