--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         </div>
     </main>
-    <script async custom-element='amp-iframe' src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='js/jquery.magnific-popup.min.js'></script>
     <script async custom-element='amp-iframe'>
         $('.open-popup-ch1').magnificPopup({
