--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
   	$('.open-popup-contact').magnificPopup({
         items: {
-                src: '<div class="white-popup"><p>Ray Bogman</br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p><p>Vladimir Kerkhoff</br><a href="mailto:vladimir@genmato.com?subject=RE:Magento 2 Cookbook - Vladimir Kerkhoff">vladimir@genmato.com</a></br></p></div>',
+                src: '<div class="white-popup"><h3>Ray Bogman - Biography</h3><p></p><amp-img class="portfolio-image" placeholder src="images/ray.png" srcset="images/ray.png 1x, images/ray.png 2x" layout="responsive" width="150" alt="Ray Bogman - Biography" height="150"></amp-img><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p><p>Vladimir Kerkhoff</br><a href="mailto:vladimir@genmato.com?subject=RE:Magento 2 Cookbook - Vladimir Kerkhoff">vladimir@genmato.com</a></br></p></div>',
                 type: 'inline'
         },
         closeBtnInside: true
