--- a/index.html
+++ b/index.html
@@ -109,7 +109,37 @@
           <a class="btn" target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook" title="Packtpub Magento 2 Bookbook">Get your Magento 2 Cookbook copy here</a>
 	</div>
 
-	 <div class="portfolio-item group first">
+  	<div class="portfolio-item group first">
+              <div class="portfolio-info">
+                <div class="date">June 2016</div>
+                <div class="description">
+                  MageTalk - A Magento Podcast - Magento 2 Cookbook.
+                </div>
+                <div class="meta">
+                  <p><strong>URL </strong><a target="_blank" href="http://magetalk.com/" title="MageTalk - A Magento Podcast - Magento 2 Cookbook">MageTalk - A Magento Podcast</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <amp-img placeholder src="images/portfolio/magetalk-magento2cookbook.png" srcset="images/portfolio/magetalk-magento2cookbook.png 1x, images/portfolio/magetalk-magento2cookbook.png 2x"  layout="responsive" width="838" alt="Magento 2 Cookbook at Magetalk" height="709"></amp-img>
+              </div>
+        </div>
+
+  	<div class="portfolio-item group">
+              <div class="portfolio-info">
+                <div class="date">April 2016</div>
+                <div class="description">
+                  Apple Itunes - Magento 2 Cookbook.
+                </div>
+                <div class="meta">
+                  <p><strong>URL </strong><a target="_blank" href="https://itunes.apple.com/us/book/magento-2-cookbook/id1077159075?mt=11" title="Apple Itunes - Magento 2 Cookbook">Apple Itunes</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <amp-img placeholder src="images/portfolio/itunes-magento2cookbook.png" srcset="images/portfolio/itunes-magento2cookbook.png 1x, images/portfolio/itunes-magento2cookbook.png 2x"  layout="responsive" width="981" alt="Magento 2 Cookbook at Itunes" height="706"></amp-img>
+              </div>
+         </div>
+
+	 <div class="portfolio-item group">
               <div class="portfolio-info">
                 <div class="date">April 2016</div>
                 <div class="description">
