--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 
   	<div class="portfolio-item group">
               <div class="portfolio-info">
-                <div class="date">April 2016</div>
+                <div class="date">May 2016</div>
                 <div class="description">
-                  Apple Itunes - Magento 2 Cookbook.
+                  PHP Weekly - Magento 2 Cookbook.
                 </div>
                 <div class="meta">
-                  <p><strong>URL </strong><a target="_blank" href="https://itunes.apple.com/us/book/magento-2-cookbook/id1077159075?mt=11" title="Apple Itunes - Magento 2 Cookbook">Apple Itunes</a></p>
+                  <p><strong>URL </strong><a target="_blank" href="http://www.phpweekly.com/archive/2016-05-26.html" title="PHP Weekly - Magento 2 Cookbook">PHP Weekly Itunes</a></p>
                 </div>
               </div>
               <div class="portfolio-image">
-                <amp-img placeholder src="images/portfolio/itunes-magento2cookbook.png" srcset="images/portfolio/itunes-magento2cookbook.png 1x, images/portfolio/itunes-magento2cookbook.png 2x"  layout="responsive" width="981" alt="Magento 2 Cookbook at Itunes" height="706"></amp-img>
+                <amp-img placeholder src="images/portfolio/phpweekly-magento2cookbook.png" srcset="images/portfolio/phpweekly-magento2cookbook.png 1x, images/portfolio/phpweekly-magento2cookbook.png 2x"  layout="responsive" width="614" alt="PHP Weekly 2 Cookbook at Itunes" height="609"></amp-img>
               </div>
          </div>
 
