--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 </head>
 <body>
 <amp-analytics type="googleanalytics" id="analytics1">
